bad/mul_invalid_types_bool_array.example_compiler_output
ERROR
[1mbad/mul_invalid_types_bool_array.lat:3:8: [1;31merror: [0;1mmultiplication is defined only for int values, not `boolean` and `string[]`[m
	false * new string[3];
	      [1;32m^[m
